# container_registry-rs

./: CHANGELOG.md  Cargo.toml  README.md  default.nix  quick-test.sh
.github/workflows/: ci.yml
src/: auth.rs  config.rs  hooks.rs  lib.rs  main.rs  registry.rs  storage.rs  test_support.rs  tests.rs  www_authenticate.rs
