[package]
name = "container-registry"
authors = [ "Marc Brinkmann <git@marcbrinkmann.de>" ]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7.5", features = [ "tracing" ] }
base64 = "0.21.5"
constant_time_eq = "0.3.0"
futures = "0.3.29"
hex = "0.4.3"
nom = "7.1.3"
rm = "0.3.2"
sec = { version = "1.0.0", features = [ "deserialize", "serialize" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7.10", features = [ "io" ] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = [ "v4", "serde" ] }

[dev-dependencies]
http-body-util = "0.1.0"
tempdir = "0.3.7"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [ "trace" ] }

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
